--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-"# BulletproofCircle.github.io" 
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+  <link rel="stylesheet" type="text/css" href="Circle.css">
+  <title>Circle</title>
+</head>
+
+<body class="">
+
+  <main class="scene">
+    <div class="actor">
+      <div class="actor__prefix">-</div>
+      <div id="shower" class="actor__content">Circle，撒~</div>
+    </div>
+
+    <div class="actor">
+      <div class="actor__prefix">-</div>
+      <div id="Circle" class="actor__content actor__content">你才撒 </div>
+    </div>
+  </main>
+
+  <script src="theater.min.js"></script>
+  <script src="Circle.js"></script>
+
+</body>
+
+</html>
