--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <main class="scene">
     <div class="actor">
       <div class="actor__prefix">-</div>
-      <div id="vader" class="actor__content">Circle，棒~</div>
+      <div id="vader" class="actor__content"></div>
     </div>
 
     <div class="actor">
       <div class="actor__prefix">-</div>
-      <div id="luke" class="actor__content actor__content">Circle,好~ </div>
+      <div id="luke" class="actor__content actor__content"></div>
     </div>
   </main>
 
