--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <link rel="stylesheet" type="text/css" href="Circle.css">
-  <title>致王同学</title>
+  <title>月色真美 毕业快乐</title>
 </head>
 
 <body class="">
